_atoi.c AUTHORS  builtin1.c  builtin.c env.c errs1.c errs.c exits.c getenv.c getinf.c getLiny.c

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all contributors in the repository
 
 Ntombikayise Mbatha <entleh6761@gmail.com>
-Tinotenda Mashinga <perfecttinotendamashingaidze@gmail.com>
+Perfect Tinotenda Mashingaidze <perfecttinotendamashingaidze@gmail.com>
